ews: Bound check calendar events

BUG: 491810